[package]
name = "nauka_rusta"
version = "0.1.0"
edition = "2024"

[dependencies]
clearscreen = "4.0.5"
colored = "3.1.1"
native-tls = "0.2.18"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.4"
tokio = { version = "1.50.0", features = ["full"] }
